--- a/benchmark/rodinia_2.4/opencl_m2s/kmeans/Makefile
+++ b/benchmark/rodinia_2.4/opencl_m2s/kmeans/Makefile
@@ -1,11 +1,11 @@
-include ../../common/make.config
+include ../../common_m2s/make.config
 # C compiler
 CC = g++
 CC_FLAGS = -g -O2 -m32
 
 kmeans: cluster.o getopt.o read_input.o kmeans_clustering.o rmse.o
 	$(CC) $(CC_FLAGS) -lm2s-opencl kmeans.cpp cluster.o getopt.o read_input.o kmeans_clustering.o rmse.o -o kmeans -I$(OPENCL_INC) -I$(OPENCL_DIR)/shared/inc/ -L$(OPENCL_LIB)
-
+	m2c --amd --amd-device Tahiti kmeans.cl
 %.o: %.[ch]
 	$(CC) $(CC_FLAGS) $< -c
 
@@ -22,4 +22,4 @@ rmse.o: rmse.c
 	$(CC) $(CC_FLAGS) rmse.c -c
 
 clean:
-	rm -f *.o *~ kmeans *.linkinfo
+	rm -f *.o *~ kmeans *.linkinfo ./*.bin
