--- a/benchmark/rodinia_2.4/opencl_m2s/lud/ocl/makefile
+++ b/benchmark/rodinia_2.4/opencl_m2s/lud/ocl/makefile
@@ -1,16 +1,16 @@
-include ../../../common/make.config
+include ../../../common_m2s/make.config
 
 INC = -I$(OPENCL_INC) -I../common
 LIB = -L$(OPENCL_LIB)
 
 #C compiler
 CC = g++
-CC_FLAGS = -g -O3 -Wall
+CC_FLAGS = -g -O3 -Wall -m32
 
 EXE = lud
 
 $(EXE): lud.cpp
-	$(CC) $(CC_FLAGS) -o $(EXE) lud.cpp ../common/common.c $(INC) $(LIB) -lOpenCL
-
+	$(CC) $(CC_FLAGS) -o $(EXE) lud.cpp ../common/common.c $(INC) $(LIB) -lm2s-opencl
+	m2c --amd --amd-device Tahiti -O0 lud_kernel.cl
 clean:
-	rm -f $(EXE)
+	rm -f $(EXE) lud_kernel.bin
