--- a/benchmark/rodinia_2.4/opencl_m2s/pathfinder/makefile
+++ b/benchmark/rodinia_2.4/opencl_m2s/pathfinder/makefile
@@ -1,20 +1,20 @@
-include ../../common/make.config
+include ../../common_m2s/make.config
 CXX = g++
-DEBUGFLAGS = -g
+DEBUGFLAGS = 
 # You will need to modify the following 2 lines
 # by inserting the correct path to the OpenCL
 # lib and inc directories.
 CXXFLAGS = -I$(OPENCL_INC) -c $(DEBUGFLAGS)
-LINKFLAGS = -L$(OPENCL_LIB)
+LINKFLAGS = -L$(OPENCL_LIB) -lm2s-opencl 
 
 # link objects(binaries) together
 a.out: main.o OpenCL.o
-	$(CXX) main.o OpenCL.o $(LINKFLAGS) -o pathfinder
+	$(CXX) main.o OpenCL.o $(LINKFLAGS) -o pathfinder -m32
+	m2c --amd --amd-device Tahiti -O0 kernels.cl
 
 # compile main function file into object (binary)
 main.o: main.cpp OpenCL.cpp kernels.cl
-	$(CXX) $(CXXFLAGS) main.cpp OpenCL.cpp
+	$(CXX) $(CXXFLAGS) main.cpp OpenCL.cpp -m32
 
 clean:
-	clear
-	@rm -f pathfinder *.o *.out *~ *\#
+	@rm -f pathfinder *.o *.out *~  kernels.bin
